# dys

./: .gitignore  CURRENT_STATUS.md  DEPLOYMENT.md  INSTALLATION.md  JOBS_INIT.md  MIGRATION_GUIDE.md  MIHOMO_GUIDE.md  PROJECT_SUMMARY.md  PYPROJECT_SUMMARY.md  QUICKSTART.md  QUICK_MIGRATION.md  README.md  README_PERFORMANCE.md  RUNNING.md  SERVER_COMPARISON.md  SERVER_SETUP_GUIDE.md  backup_for_migration.sh  deploy_new_server.sh  main.py  mihomo_config_template.yaml  pyproject.toml  setup_server_env.sh  start.bat  start.sh  start_all.bat  start_all.sh  start_all_uv.sh  start_optimized.sh  start_optimized_16g.sh  start_production.sh
backend/: admin_app.py  app.py  force_super_admin.py  init_demo_data.py  init_dys_jobs.py  migrate_db.py  migrate_super_admin.py  requirements.txt  test_download_speed.py
backend/.claude/: settings.local.json
backend/models/: models.py
backend/routes/: applications.py  auth.py  jobs.py  users.py
backend/utils/: resume_generator.py
frontend/: admin.html  index.html
